--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ api/node_modules/
 /package-lock.json
 /yarn.lock
 
+node_modules/
+.env
+.env.local
+.DS_Store
+*.log
+.vercel/
 # Environment files
 /.env
 
