--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ api/node_modules/
 /yarn.lock
 
 node_modules/
+src/app/services/auth.ts
+/home/user/Music_Uptc_Sogamoso/src/app/services/auth.ts
 .env
 .env.local
 .DS_Store
@@ -29,6 +31,7 @@ node_modules/
 
 # TypeScript cache
 *.tsbuildinfo
+auth.ts
 
 # Logs
 npm-debug.log*
