--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@supabase/supabase-js": "^2.58.0",
     "bootstrap": "^5.3.0",
     "firebase": "^10.3.1",
     "rxjs": "~7.8.0",
