--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:vercel": "ng build --configuration production"
+    "deploy": "ng build --configuration production --base-href / && gh-pages -d dist/uptc-music"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.16.3",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
