correcion de enviroments

--- a/angular.json
+++ b/angular.json
@@ -83,7 +83,10 @@
           "defaultConfiguration": "development"
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "dir": "dist/uptc-music"
+          }
         }
       }
     }
